ADD_SUBDIRECTORY(core)
# ADD_SUBDIRECTORY(pre2)


ADD_LIBRARY(${PROJECT_NAME} SHARED $<TARGET_OBJECTS:core>) 
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${EUDAQ_VERSION_MAJOR}.${EUDAQ_VERSION_MINOR})

GET_PROPERTY(PLUGIN_LIBS GLOBAL PROPERTY CONVERTER_PLUGIN)

IF(UNIX)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME}  ${EUDAQ_THREADS_LIB} ${ADDITIONAL_LIBRARIES} dl stdc++fs)
ELSE()
  TARGET_LINK_LIBRARIES(${PROJECT_NAME}  ${EUDAQ_THREADS_LIB} ${ADDITIONAL_LIBRARIES} )
ENDIF()

INSTALL(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )
